Configure SQLAlchemy and Alembic, define initial models for User, Product, Order

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,12 +1,17 @@
-FROM python:3.10-slim-buster
+FROM python:3.10-slim-bookworm
 
 WORKDIR /app
 
-RUN touch requirements.txt
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
+    libffi-dev \
+    libssl-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# COPY . .
+COPY . /app
 
-# CMD ["python", "consumer.py"]
+# CMD ["python", "app/worker_consumer.py"] # Предполагаем, что воркер будет в app/
