--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:13-alpine
@@ -62,7 +60,8 @@ services:
       - rabbitmq
     networks:
       - app_network
-    #command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] # Закомментируем пока
+    command:
+      ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
   worker:
     build:
@@ -80,6 +79,24 @@ services:
     networks:
       - app_network
     #command: ["python", "consumer.py"] # Закомментируем пока
+
+  alembic_migrator:
+    build:
+      context: .
+      dockerfile: ./app/Dockerfile # Используем тот же Dockerfile, что и для app
+    env_file:
+      - .env
+    environment:
+      DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      PYTHONPATH: /app # Важно, чтобы Alembic мог найти ваши модели
+    volumes:
+      - ./app:/app # Монтируем тот же код
+    depends_on:
+      - db # Зависим только от базы данных
+    networks:
+      - app_network
+    command: ["alembic", "upgrade", "head"] # Команда для выполнения миграций
+    # Не добавляем restart: always, так как это одноразовая задача
 
 volumes:
   db_data:
