--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,13 +47,14 @@ services:
     env_file:
       - .env
     environment:
+      PYTHONPATH: /app
       DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       REDIS_URL: redis://redis:6379/0
       RABBITMQ_URL: amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbitmq:5672/
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app
+      - .:/app
     depends_on:
       - db
       - redis
@@ -61,7 +62,7 @@ services:
     networks:
       - app_network
     command:
-      ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+      ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
   worker:
     build:
@@ -88,15 +89,15 @@ services:
       - .env
     environment:
       DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      PYTHONPATH: /app # Важно, чтобы Alembic мог найти ваши модели
+      PYTHONPATH: /app
     volumes:
-      - ./app:/app # Монтируем тот же код
+      - .:/app
+    working_dir: /app/app
     depends_on:
-      - db # Зависим только от базы данных
+      - db
     networks:
       - app_network
-    command: ["alembic", "upgrade", "head"] # Команда для выполнения миграций
-    # Не добавляем restart: always, так как это одноразовая задача
+    command: ["alembic", "upgrade", "head"]
 
 volumes:
   db_data:
