--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,15 @@ services:
     networks:
       - app_network
     command:
-      ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+      [
+        "uvicorn",
+        "app.main:app",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "8000",
+        "--reload",
+      ]
 
   worker:
     build:
@@ -74,12 +82,15 @@ services:
     environment:
       DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       RABBITMQ_URL: amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbitmq:5672/
+      PYTHONPATH: /app
     depends_on:
       - rabbitmq
-      - db # worker может взаимодействовать с БД
+      - db
     networks:
       - app_network
-    #command: ["python", "consumer.py"] # Закомментируем пока
+    volumes:
+      - .:/app
+    command: ["python", "worker/consumer.py"] # Закомментируем пока
 
   alembic_migrator:
     build:
